modules product-area and measure-unit
