# src/components/measure-unit/model.js
@@ -2,7 +2,7 @@ const { DataTypes, Model, UUIDV4} = require('sequelize');
 const db = require('../../config/connection/connectBD');
 sequelize = db.sequelize;
 
-const Tax = sequelize.define('Tax', {
+const MeasureUnit = sequelize.define('MeasureUnit', {
   id: {
     type: DataTypes.STRING,
     defaultValue: UUIDV4,
@@ -12,26 +12,10 @@ const Tax = sequelize.define('Tax', {
   name: {
     type: DataTypes.STRING,
     allowNull: false,
-  },
-  description: {
-    type: DataTypes.STRING,
-  },
-  tax: {
-    type: DataTypes.INTEGER,
-    allowNull: false,
-  },
-  taxType: {
-    type: DataTypes.JSON,
-    allowNull: false,
-  },
-  isActive: {
-    type: DataTypes.BOOLEAN,
-    defaultValue: true
   }
-
 },{
-  tableName: "taxes",
+  tableName: "MeasureUnits",
   timestamps: true
 })
 
-module.exports = Tax;
+module.exports = MeasureUnit;
