# src/routes/index.js
@@ -5,12 +5,16 @@ const BillingResolutionRouter = require('./billing-resolution')
 const WarehouseRouter = require('./warehouse');
 const TaxesRouter = require('./tax');
 const MonetaryDenominationRouter = require('./monetary-denomination');
+const ProductAreaRouter = require('./product-area');
+const MeasureAreaRouter = require('./measure-unit');
 
 
 router.use('/v1/banks', BankRouter);
 router.use('/v1/billingResolution', BillingResolutionRouter);
 router.use('/v1/warehouses', WarehouseRouter);
 router.use('/v1/taxes', TaxesRouter);
-router.use('/v1/monetaryDenomination', MonetaryDenominationRouter);
+router.use('/v1/monetaryDenominations', MonetaryDenominationRouter);
+router.use('/v1/productAreas', ProductAreaRouter);
+router.use('/v1/measureUnits', MeasureAreaRouter)
 
 module.exports = router;
